fixes mobile wizard organizations spacing and removes cui-profile fixed width

--- a/source/scss/base/_vars.scss
+++ b/source/scss/base/_vars.scss
@@ -202,7 +202,7 @@ $step-indicator-middle-bar-size: em(2);
 $step-indicator-title-color: #bbb;
 $step-indicator-title-color--active: #333;
 $step-indicator-title-color--visited: #666;
-$step-indicator-title-color--small-active: #429DD1;
+$step-indicator-title-color--small-active: $cui-primary-colors--medium;
 $step-indicator-title-color--small-visited: #666;
 $step-indicator-icon-color: #ccc;
 $step-indicator-icon-height: em(24);
