--- a/source/scss/blocks/_desktop-menu.scss
+++ b/source/scss/blocks/_desktop-menu.scss
@@ -162,8 +162,13 @@
     }
 
     .cui-profile__row {
-      display: flex;
       align-items: center;
+      display: flex;
+      width: 100%;
+
+      &:first-of-type {
+        padding: 15px 10px 0;
+      }
     }
 
     .cui-profile__user-menu {
